--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Photogram Final</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>PhotogramFinal</title>
+    <%= csrf_meta_tags %>
+
+    <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
+    <meta charset="utf-8">
+
+    <!-- Make it responsive to small screens -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
 
   <body>
+
+    <nav>
+      <ul>
+        <li><a href="/users">All users</a></li>
+        <li><a href="/photos">All public photos</a></li>
+        <% if session[:user_id] != nil %>
+          <li><a href="/edit_user_profile"><%= @current_user.username %></a></li>
+          <li><a href="/user_sign_out">Sign out</a></li>
+        <% else %>
+          <li><a href="/users/sign_in">Sign in</a></li>
+          <li><a href="/users/sign_up">Sign up</a></li>
+        <% end %>
+      </ul>
+      <%= notice %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
