--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,164 +1,41 @@
-<div>
-  <div>
-    <h1>
-      List of all users
-    </h1>
-  </div>
-</div>
+<h1>List of users</h1>
 
-<hr>
+<table border="1">
+  <tr>
+    <th>
+      Username
+    </th>
 
-<div>
-  <div>
-    <h2>
-      Add a new user
-    </h2>
+    <th>
+      Private?
+    </th>
 
-    <form action="/insert_user" method="post">
-      <div>
-        <label for="comment_count_box">
-          Comment count
-        </label>
+    <th></th>
+    <th></th>
+  </tr>
 
-        <input type="text" id="comment_count_box" name="query_comment_count">
-      </div>
-
-      <div>
-        <label for="email_box">
-          Email
-        </label>
-
-        <input type="text" id="email_box" name="query_email">
-      </div>
-
-      <div>
-        <label for="password_box">
-          Password
-        </label>
-
-        <input type="text" id="password_box" name="query_password">
-      </div>
-
-      <div>
-        <label for="like_count_box">
-          Like count
-        </label>
-
-        <input type="text" id="like_count_box" name="query_like_count">
-      </div>
-
-      <div>
-        <input type="checkbox" id="private_box" name="query_private" value="1">
-
-        <label for="private_box">Private</label>
-      </div>
-
-      <div>
-        <label for="username_box">
-          Username
-        </label>
-
-        <input type="text" id="username_box" name="query_username">
-      </div>
-
-      <button>
-        Create user
-      </button>
-    </form>
-  </div>
-</div>
-
-<hr>
-<div>
-  <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Comment count
-        </th>
-
-        <th>
-          Email
-        </th>
-
-        <th>
-          Password
-        </th>
-
-        <th>
-          Like count
-        </th>
-
-        <th>
-          Private
-        </th>
-
-        <th>
-          Username
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_users.each do |a_user| %>
-      <tr>
-        <td>
-          <%= a_user.id %>
-        </td>
-
-        <td>
-          <%= a_user.comment_count %>
-        </td>
-
-        <td>
-          <%= a_user.email %>
-        </td>
-
-        <td>
-          <%= a_user.password %>
-        </td>
-
-        <td>
-          <%= a_user.like_count %>
-        </td>
-
-        <td>
-          <%= a_user.private %>
-        </td>
-
-        <td>
-          <%= a_user.username %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_user.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_user.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/users/<%= a_user.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
+      <% @list_of_users.each do |a_thing| %>
+        <tr>
+          <td><%= a_thing.username %></td>
+          <td><% if a_thing.private == false %>
+          No
+          <% else %>
+          Yes
+          <% end %>  
+          </td>
+          <td><% if @current_user == nil %>
+          
+          <% else %>
+          <form action="follow">
+            <label for="follow_request"></label>
+            <button>Follow</button>
+          </form>
+          <% end %>
+          </td>
+          <td>
+            <a href="/users/<%= a_thing.username %>">Show Details</a>
+          </td>
+        </tr>
       <% end %>
-    </table>
-  </div>
-</div>
 
-<hr>
+  </table>
