some more progress

--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -1,29 +1,22 @@
 <div >
-  <h5>
+  <h2>
     Edit User Account
-  </h5>
+  </h2>
 
   <div>
-    <form action="/modify_user" method="post">
+    <form action="/users/edit" method="post">
       <div>
         <label for="email_box">Email</label>
         <input id="email_box" name="query_email" value="<%= @current_user.email %>">
       </div>
-      <div>
-        <label for="comments_count_box">Comments count</label>
-        <input id="comments_count_box" name="query_comments_count" value="<%= @current_user.comments_count %>">
+            <div>
+        <label for="username_box">Username</label>
+        <input id="username_box" name="query_username" value="<%= @current_user.username %>">
       </div>
-      <div>
-        <label for="likes_count_box">Likes count</label>
-        <input id="likes_count_box" name="query_likes_count" value="<%= @current_user.likes_count %>">
-      </div>
+
       <div>
         <label for="private_box">Private</label>
         <input id="private_box" name="query_private" type="checkbox" value="1" <%= "checked" if @current_user.private %>>
-      </div>
-      <div>
-        <label for="username_box">Username</label>
-        <input id="username_box" name="query_username" value="<%= @current_user.username %>">
       </div>
 
       <div>
@@ -36,9 +29,9 @@
         <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
       </div>
 
-      <button>
-        Update account
-      </button>
+  <div class="actions">
+    <input type="submit" name="commit" value="Update"/>
+  </div>
     </form>
   </div>
 </div>
