--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -7,22 +7,6 @@
     <input id="email_box" name="query_email" placeholder="Choose a email..." type="text">
   </div>
                  
-  <div>
-    <label for="comments_count_box">Comments count</label>
-      
-    <input type="text" id="comments_count_box" name="query_comments_count">
-  </div>
-         
-  <div>
-    <label for="likes_count_box">Likes count</label>
-      
-    <input type="text" id="likes_count_box" name="query_likes_count">
-  </div>
-         
-  <div>
-    <label for="private_box">Private</label>
-    <input id="private_box" name="query_private" type="checkbox">
-  </div>
          
   <div>
     <label for="username_box">Username</label>
@@ -40,6 +24,12 @@
     <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
   </div>
 
+         
+  <div>
+    <label for="private_box">Private</label>
+    <input id="private_box" name="query_private" type="checkbox">
+  </div>
+
   <button>
     Sign up
   </button>
@@ -48,5 +38,5 @@
 <hr>
 
 <p>
-  Or, <a href="/user_sign_in">Sign in</a> instead.
+   <a href="/users/sign_in">Log in</a>
 </p>
