--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 
 
       <div>
-          <a href="/delete_follow_request/2027">
+          <a href="/delete_follow_request">
             Unfollow
           </a>
     </div>
