--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <li><a href="/photos">All public photos</a></li>
         <% if session[:user_id] != nil %>
           <li><a href="/edit_user_profile"><%= @current_user.username %></a></li>
-          <li><a href="/user_sign_out">Sign out</a></li>
+          <li><a href="/users/sign_out">Sign out</a></li>
         <% else %>
           <li><a href="/users/sign_in">Sign in</a></li>
           <li><a href="/users/sign_up">Sign up</a></li>
