--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Photo #<%= @the_photo.id %> details
+      Photo details
     </h1>
 
     <div>
@@ -12,9 +12,12 @@
       </div>
 
       <div>
+        <% if @the_photo.owner == @current_user %>
         <a href="/delete_photo/<%= @the_photo.id %>">
-          Delete photo
+          Delete this photo
         </a>
+        <% else %>
+        <% end %>
       </div>
     </div>
 
@@ -37,7 +40,7 @@
         Image
       </dt>
       <dd>
-        <%= @the_photo.image %>
+        <img src="<%= @the_photo.image %>">
       </dd>
 
       <dt>
@@ -51,7 +54,7 @@
         Owner
       </dt>
       <dd>
-        <%= @the_photo.owner_id %>
+        <%= @the_photo.owner.username %>
       </dd>
 
       <dt>
@@ -67,65 +70,67 @@
       <dd>
         <%= time_ago_in_words(@the_photo.updated_at) %> ago
       </dd>
+    <dt>Fans</dt>
+<dd>
+<% @the_photo.likes.each do |fan| %>
+  <%= fan.username %>
+
+<% end %>
+</dd>
+
+  <dd>
+
+   <form action="/insert_like" method="post">
+  <input type="hidden" name="query_photo_id" value="<%= @the_photo.id %>">
+  <button>Like</button>
+</form>
+  </dd>
+
     </dl>
   </div>
 </div>
 
 <hr>
 
+<h2>Comments</h2>
 
-<div>
-  <div>
-    <h2>
-      Edit photo
-    </h2>
+<table>
+  <tr>
+    <th>Commenter</th>
+    <th>Comment</th>
+    <th>Posted</th>
+  </tr>
+  <% @list_of_comments.each do |a_comment| %>
+  <% if a_comment.photo_id == @the_photo.id %>
+    <tr>
+      <td>
+        <%= a_comment.author.username %>
+      </td>
 
-    <form action="/modify_photo/<%= @the_photo.id %>"  method="post" >
-      <div>
-        <label for="caption_box">
-          Caption
-        </label>
+      <td>
+        <%= a_comment.body %>
+      </td>
 
-        <textarea id="caption_box" name="query_caption"><%= @the_photo.caption %></textarea>
-      </div>
+      <td>
+        <%= time_ago_in_words(a_comment.created_at) %> ago
+      </td>
+    </tr>
+    <% else %>
+    <% end %>
+    <% end %>
+  </table> 
 
-      <div>
-        <label for="comments_count_box">
-          Comments count
-        </label>
+<% if @current_user != nil %>
+<h3>Add a new comment</h3>
 
-        <input type="text" id="comments_count_box" name="query_comments_count" value="<%= @the_photo.comments_count %>">
-      </div>
+  <form action="/insert_comment" method="post">
+    <input type="hidden" value="<%= @the_photo.id %>" name="query_photo_id">
+    <input type="hidden" value="<%= @current_user.id %>" name="query_author_id">
+    
+    <label for="browser_comment">Comment</label>
+    <textarea id="browser_comment" name="query_body" placeholder="Enter a comment..."></textarea>
 
-      <div>
-        <label for="image_box">
-          Image
-        </label>
-
-        <input type="text" id="image_box" name="query_image" value="<%= @the_photo.image %>">
-      </div>
-
-      <div>
-        <label for="likes_count_box">
-          Likes count
-        </label>
-
-        <input type="text" id="likes_count_box" name="query_likes_count" value="<%= @the_photo.likes_count %>">
-      </div>
-
-      <div>
-        <label for="owner_id_box">
-          Owner
-        </label>
-
-        <input type="text" id="owner_id_box" name="query_owner_id" value="<%= @the_photo.owner_id %>">
-      </div>
-
-      <button>
-        Update photo
-      </button>
-    </form>
-  </div>
-</div>
-
-<hr>
+    <button>Add comment</button>
+  </form>
+<% else %>
+<% end %>
