--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign in</h1>
+<h1>Log in</h1>
 
 <form action="/user_verify_credentials" method="post">
   <div>
@@ -11,13 +11,14 @@
     <input id="password_box" name="query_password" placeholder="Enter your password..." type="password">
   </div>
 
-  <button>
-    Sign in
-  </button>
+  <div class="actions">
+    <input type="submit" name="commit" value="Log in" data-disable-with="Log in" />
+  </div>
 </form>
+
 
 <hr>
 
 <p>
-  Or, <a href="/user_sign_up">Sign up</a> instead.
+ <a href="/users/sign_up">Log in</a>
 </p>
