--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -79,7 +79,7 @@
         </th>
       </tr>
       
-      <% @list_of_photos.each do |a_photo| %>
+      <% @photos.each do |a_photo| %>
       <tr>
       <% if a_photo.owner.private == true %>
 
