--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -1,36 +1,29 @@
 <div >
-  <h2>
+  <h5>
     Edit User Account
-  </h2>
+  </h5>
 
   <div>
-    <form action="/users/edit" method="post">
+    <form id="edit_user" action="/edit_user" method="post">
       <div>
         <label for="email_box">Email</label>
         <input id="email_box" name="query_email" value="<%= @current_user.email %>">
       </div>
-            <div>
-        <label for="username_box">Username</label>
-        <input id="username_box" name="query_username" value="<%= @current_user.username %>">
-      </div>
-
       <div>
         <label for="private_box">Private</label>
         <input id="private_box" name="query_private" type="checkbox" value="1" <%= "checked" if @current_user.private %>>
       </div>
-
       <div>
-        <label for="password_box">Password</label>
-        <input id="password_box" name="query_password" placeholder="Choose a password..." type="password">
+        <label for="username_box">Username</label>
+        <input id="username_box" name="query_username" value="<%= @current_user.username %>">
       </div>
-    
       <div>
-        <label for="password_confirmation_box">Password Confirmation</label>
-        <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
+        <label for="current_password">Current password</label>
+        <input id="current_password" name="current_password" type="password">
       </div>
-
+  
   <div class="actions">
-    <input type="submit" name="commit" value="Update"/>
+    <input type="submit" name="commit" value="Update" " />
   </div>
     </form>
   </div>
