--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,45 +2,39 @@
 
 <table border="1">
   <tr>
-    <th>
-      Username
-    </th>
-
-    <th>
-      Private?
-    </th>
-
+    <th>Username</th>
+    <th>Private?</th>
     <th></th>
     <th></th>
   </tr>
 
-      <% @list_of_users.each do |a_thing| %>
-        <tr>
-          <td><%= a_thing.username %></td>
-          <td><% if a_thing.private == false %>
-          No
-          <% @request_status == 'Accepted' %>
-          <% else %>
-          Yes
-          <% @request_status == 'Pending' %>
-          <% end %>  
-          </td>
-          <td><% if @current_user == nil %>
-          
-          <% else %>
-   
-          <form action="insert_follow_request" method="post">
-            <label for="follow_request"></label>
-            <button>Follow</button>
-          </form>
-          <% @recipient_id = a_thing.id%>
-          <% end %>
- 
-          </td>
-          <td>
-            <a href="/users/<%= a_thing.username %>">Show Details</a>
-          </td>
-        </tr>
-      <% end %>
-
-  </table>
+  <% @users.each do |user| %>
+  <tr>
+    <td><%= user.username %></td>
+    <td><%= user.private ? 'Yes' : 'No' %></td>
+    <td>
+  <% if current_user %>
+  <% if user.private && current_user.sent_request_to?(user) %>
+    <p>Request sent</p>
+    <%= form_with(url: cancel_request_path(user), method: :delete) do %>
+  <%= submit_tag 'Unfollow', style: 'background: none!important;border: none;padding: 0!important;color: blue;text-decoration: underline;cursor: pointer;' %>
+<% end %>
+  <% elsif current_user.following?(user) %>
+  <%= form_with(url: unfollow_user_path(user), method: :post) do %>
+    <%= hidden_field_tag :_method, :delete %>
+    <%= submit_tag 'Unfollow', style: 'background: none!important;border: none;padding: 0!important;color: blue;text-decoration: underline;cursor: pointer;' %>
+  <% end %>
+  <% else %>
+    <form action="/insert_follow_request" method="post">
+      <%= hidden_field_tag 'query_sender_id', current_user.id %>
+      <%= hidden_field_tag 'query_recipient_id', user.id %>
+      <%= hidden_field_tag 'query_status', 'pending' %>
+      <button>Follow</button>
+    </form>
+  <% end %>
+<% end %>
+    </td>
+    <td><a href="/users/<%= user.id %>">Show details</a></td>
+  </tr>
+  <% end %>
+</table>
