--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,46 +1,51 @@
-
-<h1><%= @the_user.username %></h1>
+<h1><%= @current_user.username %></h1>
 
 <dl>
-  <dt>Private</dt>
-  <dd><%= @the_user.private %></dd>
+  
+    <dt>Private</dt>
+    <dd><%= @current_user.private %></dd>
+  
+    <dt>Followers</dt>
+    <dd><%= @current_user.followers.count %></dd>
+  
+  <td><% if @current_user.following?(@user) %>
+  <%= form_with(url: unfollow_user_path(@user), method: :post) do %>
+    <%= hidden_field_tag :_method, :delete %>
+    <%= submit_tag 'Unfollow', style: 'background: none!important;border: none;padding: 0!important;color: blue;text-decoration: underline;cursor: pointer;' %>
+  <% end %>
+<% else %>
+  <form action="/insert_follow_request" method="post">
+    <%= hidden_field_tag 'query_sender_id', @current_user.id %>
+    <%= hidden_field_tag 'query_recipient_id', @current_user.id %>
+    <%= hidden_field_tag 'query_status', 'pending' %>
+    <button>Follow</button>
+  </form>
+<% end %>
+</td>
 
-  <dt>Followers</dt>
-  <dd>
-    <%= FollowRequest.where({ :recipient_id => @the_user}).where({ :status => "accepted"}).count %>
-
-
-      <div>
-          <a href="/delete_follow_request">
-            Unfollow
-          </a>
-    </div>
-
-  </dd>
-
-  <dt>Following</dt>
-  <dd><%= FollowRequest.where({ :sender_id => @the_user}).where({ :status => "accepted"}).count %></dd>
+    <dt>Following</dt> 
+    <dd> <%= @current_user.following.count %></dd>
 
 </dl>
 
 <nav>
   <ul>
     <li>
-      <a href="/users/austin">Profile</a>
+      <a href="/users/<%= @current_user.username %>">Profile</a>
     </li>
     <li>
-      <a href="/users/austin/liked_photos">Liked photos</a>
+      <a href="<%= liked_photos_user_path(@current_user) %>">Liked photos</a>
     </li>
-    <li>
-      <a href="/users/austin/feed">Feed</a>
-    </li>
-    <li>
-      <a href="/users/austin/discover">Discover</a>
-    </li>
+  <li>
+  <a href="<%= feed_user_path(@current_user) %>">Feed</a>
+</li>
+<li>
+  <a href="<%= discovery_user_path(@current_user) %>">Discovery</a>
+</li>
   </ul>
 </nav>
 
-<h2>Own photos (<%= @the_user.photos.count %>)</h2>
+<h2>Own photos (<%= @current_user.own_photos.count %>)</h2>
 
 <table border="1">
   <tr>
@@ -65,32 +70,18 @@
     </th>
 
     <th></th>
-  </tr>
-
-<% @list_of_photos.each do |a_photo| %>
-  <tr>
-    <td>
-      <img src="<%= a_photo.image %>">
-    </td>
-
-    <td>
-      <%= a_photo.owner.username %>
-    </td>
-
-    <td>
-      <%= a_photo.caption %>
-    </td>
-
-    <td>
-      <%= time_ago_in_words(a_photo.created_at) %> ago
-    </td>
-
-    <td>
-      <%= a_photo.likes_count %>
-    </td>
-
-    <td>
-      <a href="/photos/<%= a_photo.id %>">Show details</a>
-    </td>
-  </tr>
-<% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% @current_user.own_photos.each do |photo| %>
+      <tr>
+        <td><%= image_tag(photo.image.url) if photo.image? %></td>
+        <td><%= photo.owner.username %></td>
+        <td><%= photo.caption %></td>
+        <td><%= time_ago_in_words(photo.created_at) %> ago</td>
+        <td><%= photo.likes_count %></td>
+        <td><%= link_to "Show details", "/photos/#{photo.id}" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
