--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,96 +1,52 @@
 <div>
   <div>
-    <h1>
-      Photo details
-    </h1>
 
-    <div>
-      <div>
-        <a href="/photos">
-          Go back
-        </a>
-      </div>
+    <h1>Photo Details</h1>
 
-      <div>
-        <% if @the_photo.owner == @current_user %>
-        <a href="/delete_photo/<%= @the_photo.id %>">
-          Delete this photo
-        </a>
-        <% else %>
-        <% end %>
-      </div>
-    </div>
+<dl>
+  <dt>Image</dt>
+  <dd>
+    <img src="<%= @photo.image %>">
+  </dd>
 
-    <dl>
-      <dt>
-        Caption
-      </dt>
-      <dd>
-        <%= @the_photo.caption %>
-      </dd>
+  <dt>Caption</dt>
+  <dd>
+    <%= @photo.caption %>
 
-      <dt>
-        Comments count
-      </dt>
-      <dd>
-        <%= @the_photo.comments_count %>
-      </dd>
+  </dd>
 
-      <dt>
-        Image
-      </dt>
-      <dd>
-        <img src="<%= @the_photo.image %>">
-      </dd>
+  <dt>Owner</dt>
+  <dd>
+    <%= @photo.owner.username %>
+  </dd>
 
-      <dt>
-        Likes count
-      </dt>
-      <dd>
-        <%= @the_photo.likes_count %>
-      </dd>
+  <dt>Posted</dt>
+  <dd>
+    <%= time_ago_in_words(@photo.created_at) %> ago
+  </dd>
 
-      <dt>
-        Owner
-      </dt>
-      <dd>
-        <%= @the_photo.owner.username %>
-      </dd>
+  <dt>Likes count</dt>
+  <dd><%= @photo.likes_count %></dd>
 
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_photo.created_at) %> ago
-      </dd>
+  <dt>Comments count</dt>
+  <dd><%= @photo.comments_count %></dd>
 
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_photo.updated_at) %> ago
-      </dd>
-
+  <dt>Fans</dt>
 <dd>
-<% @the_photo.likes.each do |fan| %>
+<% @photo.fans.each do |fan| %>
   <%= fan.username %>
 
 <% end %>
 </dd>
-
+ <dt>Add a fan</dt>
   <dd>
 
    <form action="/insert_like" method="post">
-  <input type="hidden" name="query_photo_id" value="<%= @the_photo.id %>">
+  <input type="hidden" name="query_photo_id" value="<%= @photo.id %>">
   <button>Like</button>
 </form>
   </dd>
 
-    </dl>
-  </div>
-</div>
-
-<hr>
 
 <h2>Comments</h2>
 
@@ -100,37 +56,32 @@
     <th>Comment</th>
     <th>Posted</th>
   </tr>
-  <% @list_of_comments.each do |a_comment| %>
-  <% if a_comment.photo_id == @the_photo.id %>
-    <tr>
-      <td>
-        <%= a_comment.author.username %>
-      </td>
 
-      <td>
-        <%= a_comment.body %>
-      </td>
+  <% @photo.comments.each do |comment| %>
+  <tr>
+    <td>
+      <%= comment.author_id%>
+    </td>
 
-      <td>
-        <%= time_ago_in_words(a_comment.created_at) %> ago
-      </td>
-    </tr>
-    <% else %>
-    <% end %>
-    <% end %>
-  </table> 
+    <td>
+      <%= comment.body %>
+    </td>
 
-<% if @current_user != nil %>
+    <td>
+      <%= time_ago_in_words(comment.created_at) %> ago
+    </td>
+  </tr>
+  
+  <% end %>
+</table>
+
 <h3>Add a new comment</h3>
 
-  <form action="/insert_comment" method="post">
-    <input type="hidden" value="<%= @the_photo.id %>" name="query_photo_id">
-    <input type="hidden" value="<%= @current_user.id %>" name="query_author_id">
-    
-    <label for="browser_comment">Comment</label>
-    <textarea id="browser_comment" name="query_body" placeholder="Enter a comment..."></textarea>
+<form action="/insert_comment" method="post">
+  <input type="hidden" value="952" name="query_photo_id">
+  
+  <label for="browser_comment">Comment</label>
+  <textarea id="browser_comment" name="query_body" placeholder="Enter a comment..."></textarea>
 
-    <button>Add comment</button>
-  </form>
-<% else %>
-<% end %>
+  <button>Add comment</button>
+</form>
