--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,127 +1,62 @@
 <div>
   <div>
-    <h1>
-      List of photos
-    </h1>
+    <h1>List of photos</h1>
   </div>
 </div>
 
 <hr>
-<% if @current_user == nil%>
-<% else %>
-<div>
+
+<% if @current_user %>
   <div>
-    <h2>
-      Add photo
-    </h2>
+    <div>
+      <h2>Add photo</h2>
 
-    <form action="/insert_photo" method="post" enctype="multipart/form-data" class="form-horizontal">
+      <form action="/photos" method="post" enctype="multipart/form-data" class="form-horizontal">
+        <label for="caption_box">Caption</label>
+        <textarea id="caption_box" name="photo[caption]" rows="3"></textarea>
 
-        <label for="caption_box">
-          Caption
-        </label>
+        <label for="image_box">Image</label>
+        <input type="file" id="image_box" name="photo[image]" class="form-control">
 
-        <textarea id="caption_box" name="query_caption" rows="3"></textarea>
+        <input type="hidden" value="<%= @current_user.id %>" name="photo[owner_id]">
 
-        <label for="image_box">
-          Image
-        </label>
-
-        <input type="file" id="image_box" name="query_image" class="form-control">
-
-        <input type="hidden" value="<%= @current_user.id %>" name="query_owner_id">
-
-      <button>
-        Add photo
-      </button>
-    </form>
+        <button type="submit">Add photo</button>
+      </form>
+    </div>
   </div>
-</div>
 <% end %>
+
 <hr>
+
 <div>
   <div>
     <table border="1">
       <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Caption
-        </th>
-
-        <th>
-          Comments count
-        </th>
-
-        <th>
-          Image
-        </th>
-
-        <th>
-          Likes count
-        </th>
-
-        <th>
-          Owner
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
+        <th>ID</th>
+        <th>Caption</th>
+        <th>Comments count</th>
+        <th>Image</th>
+        <th>Likes count</th>
+        <th>Owner</th>
+        <th>Created at</th>
+        <th>Updated at</th>
+        <th></th>
       </tr>
-      
+
       <% @photos.each do |a_photo| %>
-      <tr>
-      <% if a_photo.owner.private == true %>
-
-      <% else %>
-        <td>
-          <%= a_photo.id %>
-        </td>
-
-        <td>
-          <%= a_photo.caption %>
-        </td>
-
-        <td>
-          <%= a_photo.comments_count %>
-        </td>
-
-        <td>
-          <img src="<%= a_photo.image %>" class="img-responsive">
-        </td>
-
-        <td>
-          <%= a_photo.likes_count %>
-        </td>
-
-        <td>
-          <%= a_photo.owner_id %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_photo.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_photo.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/photos/<%= a_photo.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
+        <% if !a_photo.owner.private %>
+          <tr>
+            <td><%= a_photo.id %></td>
+            <td><%= a_photo.caption %></td>
+            <td><%= a_photo.comments.count %></td>
+            <td><img src="<%= a_photo.image.url %>" class='small-image'></td>
+            <td><%= a_photo.likes.count %></td>
+            <td><%= a_photo.owner.username %></td> <!-- Display username instead of ID -->
+            <td><%= time_ago_in_words(a_photo.created_at) %> ago</td>
+            <td><%= time_ago_in_words(a_photo.updated_at) %> ago</td>
+            <td><a href="/photos/<%= a_photo.id %>">Show details</a></td>
+          </tr>
+        <% end %>
       <% end %>
     </table>
   </div>
