--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,37 +4,44 @@
   <tr>
     <th>Username</th>
     <th>Private?</th>
-    <th></th>
-    <th></th>
+    <th>Follow/Unfollow</th>
+    <th>Details</th>
   </tr>
 
   <% @users.each do |user| %>
-  <tr>
-    <td><%= user.username %></td>
-    <td><%= user.private ? 'Yes' : 'No' %></td>
-    <td>
-  <% if current_user %>
-  <% if user.private && current_user.sent_request_to?(user) %>
-    <p>Request sent</p>
-    <%= form_with(url: cancel_request_path(user), method: :delete) do %>
-  <%= submit_tag 'Unfollow', style: 'background: none!important;border: none;padding: 0!important;color: blue;text-decoration: underline;cursor: pointer;' %>
-<% end %>
-  <% elsif current_user.following?(user) %>
-  <%= form_with(url: unfollow_user_path(user), method: :post) do %>
-    <%= hidden_field_tag :_method, :delete %>
-    <%= submit_tag 'Unfollow', style: 'background: none!important;border: none;padding: 0!important;color: blue;text-decoration: underline;cursor: pointer;' %>
-  <% end %>
-  <% else %>
-    <form action="/insert_follow_request" method="post">
-      <%= hidden_field_tag 'query_sender_id', current_user.id %>
-      <%= hidden_field_tag 'query_recipient_id', user.id %>
-      <%= hidden_field_tag 'query_status', 'pending' %>
-      <button>Follow</button>
-    </form>
-  <% end %>
-<% end %>
-    </td>
-    <td><a href="/users/<%= user.id %>">Show details</a></td>
-  </tr>
+    <tr>
+      <td><%= user.username %></td>
+      <td><%= user.private ? 'Yes' : 'No' %></td>
+      <td>
+        <% if current_user && current_user != user %> <!-- Ensure users can't follow themselves -->
+          <% if user.private && current_user.sent_request_to?(user) %>
+            <p>Request sent.</p>
+            <form action="<%= cancel_request_path(user) %>" method="post">
+              <input type="hidden" name="_method" value="delete">
+              <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+              <button type="submit" style="background: none!important; border: none; padding: 0!important; color: blue; text-decoration: underline; cursor: pointer;">
+                Cancel
+              </button>
+            </form>
+          <% elsif current_user.following?(user) %>
+            <%= form_with(url: unfollow_user_path(user), method: :delete, local: true) do %>
+              <button type="submit" style="background: none!important; border: none; padding: 0!important; color: blue; text-decoration: underline; cursor: pointer;">
+                Unfollow
+              </button>
+            <% end %>
+          <% else %>
+            <%= form_with(url: insert_follow_request_path, method: :post, local: true) do %>
+              <%= hidden_field_tag 'query_sender_id', current_user.id %>
+              <%= hidden_field_tag 'query_recipient_id', user.id %>
+              <%= hidden_field_tag 'query_status', 'pending' %>
+              <button type="submit" style="background: none!important; border: none; padding: 0!important; color: blue; text-decoration: underline; cursor: pointer;">
+                Follow
+              </button>
+            <% end %>
+          <% end %>
+        <% end %>
+      </td>
+      <td><a href="<%= user_path(user.username) %>">Show details</a></td>
+    </tr>
   <% end %>
 </table>
