--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,22 @@
-<h1><%= @current_user.username %></h1>
+<h1><%= params.fetch(:username) %></h1>
 
 <dl>
   
     <dt>Private</dt>
-    <dd><%= @current_user.private %></dd>
+    <dd><%= @user.private %></dd>
   
     <dt>Followers</dt>
-    <dd><%= @current_user.followers.count %></dd>
+    <dd><%= @user.followers.count %></dd>
   
-  <td><% if @current_user.following?(@user) %>
+  <td><% if current_user.following?(@user) %>
   <%= form_with(url: unfollow_user_path(@user), method: :post) do %>
     <%= hidden_field_tag :_method, :delete %>
     <%= submit_tag 'Unfollow', style: 'background: none!important;border: none;padding: 0!important;color: blue;text-decoration: underline;cursor: pointer;' %>
   <% end %>
 <% else %>
   <form action="/insert_follow_request" method="post">
-    <%= hidden_field_tag 'query_sender_id', @current_user.id %>
-    <%= hidden_field_tag 'query_recipient_id', @current_user.id %>
+    <%= hidden_field_tag 'query_sender_id', current_user.id %>
+    <%= hidden_field_tag 'query_recipient_id', @user.id %>
     <%= hidden_field_tag 'query_status', 'pending' %>
     <button>Follow</button>
   </form>
@@ -24,28 +24,28 @@
 </td>
 
     <dt>Following</dt> 
-    <dd> <%= @current_user.following.count %></dd>
+    <dd> <%= @user.following.count %></dd>
 
 </dl>
 
 <nav>
   <ul>
     <li>
-      <a href="/users/<%= @current_user.username %>">Profile</a>
+      <a href="/users/<%= @user.username %>">Profile</a>
     </li>
     <li>
-      <a href="<%= liked_photos_user_path(@current_user) %>">Liked photos</a>
+      <a href="<%= liked_photos_user_path(@user) %>">Liked photos</a>
     </li>
   <li>
-  <a href="<%= feed_user_path(@current_user) %>">Feed</a>
+  <a href="<%= feed_user_path(@user) %>">Feed</a>
 </li>
 <li>
-  <a href="<%= discovery_user_path(@current_user) %>">Discovery</a>
+  <a href="<%= discovery_user_path(@user) %>">Discovery</a>
 </li>
   </ul>
 </nav>
 
-<h2>Own photos (<%= @current_user.own_photos.count %>)</h2>
+<h2>Own photos (<%= @user.own_photos.count %>)</h2>
 
 <table border="1">
   <tr>
@@ -73,9 +73,9 @@
     </tr>
   </thead>
   <tbody>
-    <% @current_user.own_photos.each do |photo| %>
+    <% @user.own_photos.each do |photo| %>
       <tr>
-        <td><%= image_tag(photo.image.url) if photo.image? %></td>
+        <td><img src="<%= photo.image.url %>" alt="Photo"></td>
         <td><%= photo.owner.username %></td>
         <td><%= photo.caption %></td>
         <td><%= time_ago_in_words(photo.created_at) %> ago</td>
