--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,37 +7,29 @@
 <hr>
 
 <% if @current_user %>
-  <div>
-    <div>
-      <h2>Add photo</h2>
+<form action="/insert_photo" method="post">
+  <label for="browser_input">Image</label>
+  <input id="browser_input" type="file" id="image" name="image" class="form-control" placeholder="Enter a URL for the image...">
 
-      <form action="/photos" method="post" enctype="multipart/form-data" class="form-horizontal">
-        <label for="caption_box">Caption</label>
-        <textarea id="caption_box" name="photo[caption]" rows="3"></textarea>
+  <label for="browser_caption">Caption</label>
+  <textarea id="browser_caption" name="caption" placeholder="Enter a caption for the photo..."></textarea>
 
-        <label for="image_box">Image</label>
-        <input type="file" id="image_box" name="photo[image]" class="form-control">
+  <input type="hidden" name="owner_id" value="<%= current_user.id %>">
 
-        <input type="hidden" value="<%= @current_user.id %>" name="photo[owner_id]">
-
-        <button type="submit">Add photo</button>
-      </form>
-    </div>
-  </div>
+  <button>Add photo</button>
+</form>
 <% end %>
 
 <hr>
 
-<div>
-  <div>
+
     <table border="1">
       <tr>
-        <th>ID</th>
-        <th>Caption</th>
-        <th>Comments count</th>
         <th>Image</th>
-        <th>Likes count</th>
+        <th>Caption</th>
         <th>Owner</th>
+        <th>Comments count</th>
+        <th>Likes count</th>
         <th>Created at</th>
         <th>Updated at</th>
         <th></th>
@@ -48,10 +40,10 @@
           <tr>
             <td><%= a_photo.id %></td>
             <td><%= a_photo.caption %></td>
-            <td><%= a_photo.comments.count %></td>
-            <td><img src="<%= a_photo.image.url %>" class='small-image'></td>
-            <td><%= a_photo.likes.count %></td>
             <td><%= a_photo.owner.username %></td> <!-- Display username instead of ID -->
+            <td><%= a_photo.comments.count %></td>
+            <td><%= a_photo.likes.count %></td>
+      
             <td><%= time_ago_in_words(a_photo.created_at) %> ago</td>
             <td><%= time_ago_in_words(a_photo.updated_at) %> ago</td>
             <td><a href="/photos/<%= a_photo.id %>">Show details</a></td>
@@ -59,7 +51,7 @@
         <% end %>
       <% end %>
     </table>
-  </div>
-</div>
+  
+
 
 <hr>
